# test_ast_fastapi

./: .endpoint-detector.yaml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  future-secure-design.md  future.md  pyproject.toml  readme.md  structure.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: README.md
examples/di_patterns/: .endpoint_mypy_cache.json  README.md
examples/di_patterns/class_based/: change_database_service.diff  main.py
examples/di_patterns/db_session/: change_session.diff  main.py
examples/di_patterns/function_based/: change_auth.diff  main.py
examples/di_patterns/nested_deps/: change_base_dep.diff  main.py
examples/di_patterns/request_context/: change_ip_extraction.diff  main.py
examples/di_patterns/security_deps/: change_token_decode.diff  main.py
examples/diffs/: model_change.diff  multi_file_change.diff  service_change.diff  simple_change.diff
examples/sample_fastapi_project/: main.py
examples/sample_fastapi_project/database/: connection.py
examples/sample_fastapi_project/models/: __init__.py  item.py  user.py
examples/sample_fastapi_project/routers/: __init__.py  items.py  users.py
examples/sample_fastapi_project/services/: __init__.py  item_service.py  user_service.py
examples/sample_fastapi_project/utils/: helpers.py
src/fastapi_endpoint_detector/: __init__.py  __main__.py  cli.py  config.py
src/fastapi_endpoint_detector/analyzer/: __init__.py  change_mapper.py  coverage_analyzer.py  dependency_graph.py  endpoint_registry.py  mypy_analyzer.py
src/fastapi_endpoint_detector/executor/: vm_executor.py
src/fastapi_endpoint_detector/models/: __init__.py  dependency.py  diff.py  endpoint.py  report.py
src/fastapi_endpoint_detector/output/: __init__.py  formatters.py  html_output.py  json_output.py  markdown_output.py  text_output.py  yaml_output.py
src/fastapi_endpoint_detector/parser/: __init__.py  diff_parser.py  fastapi_extractor.py  secure_ast_extractor.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli.py  test_di_patterns.py
tests/unit/: __init__.py  test_diff_parser.py  test_endpoint_registry.py  test_formatters.py  test_models.py  test_multiple_call_stacks.py  test_mypy_analyzer.py  test_mypy_analyzer_edge_cases.py  test_orphan_detection.py  test_secure_ast_extractor.py  test_vm_executor.py
